[Issue 548]Fixed Carbon Core find bugs and cleaned code (#549)
* Fixed Carbon core find bugs and cleaned code

* Fixed review comments